appId: host.exp.exponent
---
- launchApp
- waitForAnimationToEnd
- tapOn: "Leaderboard"
- waitForAnimationToEnd
- assertVisible: "Leaderboard"
- assertVisible: "Reaction Board"
